Correction CSS + jump sound

--- a/css/avatar.css
+++ b/css/avatar.css
@@ -1,6 +1,6 @@
 #ninja {
     position: absolute;
-    bottom: 0;
+    bottom: -15px;
     left: 250px;
 }
 
