--- a/css/obstacles.css
+++ b/css/obstacles.css
@@ -6,28 +6,28 @@
 
 #blocks .suprise-block1 {
 	position: absolute;
-	bottom: 134.5px;
+	bottom: 117.5px;
 	left: 568.5px;
 	width: 33.5px;
 }
 
 #items .suprise-coin1 {
 	position: absolute;
-	bottom: 137.5px;
+	bottom: 121.5px;
 	left: 574px;
 	width: 23px;
 }
 
 #blocks .suprise-block2 {
 	position: absolute;
-	bottom: 295px;
+	bottom: 278px;
 	left: 862px;
 	width: 33.5px;
 }
 
 #items .suprise-coin2 {
 	position: absolute;
-	bottom: 298.5px;
+	bottom: 282.5px;
 	left: 868px;
 	width: 23px;
 }
