--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,5 @@
 
 .playzone {
 	position: relative;
-	height: 783px;
+	height: 766px;
 }
